<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>accel_bringup</name>
  <version>0.0.0</version>
  <description>This package contains launch files for running autonomous navigation for task issued by Acceleration Robotics</description>
  <maintainer email="shuchi.professional@gmail.com">Shuchi Saxena</maintainer>
  <license>TODO: Add license</license>
  <author>Shuchi Saxena</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Following dependencies can be installed using rosdep -->

  <depend>joint_state_publisher_gui</depend>
  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>accel_description</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>explore_lite</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

